--- a/app/TestTCP/Makefile
+++ b/app/TestTCP/Makefile
@@ -1,5 +1,5 @@
 PROGRAM= testTCP
-EXTRA_CXXFLAGS+= -std=gnu++11 -g
+EXTRA_CXXFLAGS+= -std=gnu++11
 EXTRA_LIBS+= -lgtest -lgtest_main
 include ../../mk/find_tcp_solution.mk
 
